# tandem

./: Cargo.toml  LICENSE  LICENSE.md  README.md  release_version.sh  test_wasm_credit_scoring_example.sh  test_wasm_echo_example.sh  test_wasm_smart_cookie_example.sh
.github/: dependabot.yml
.github/workflows/: audit.yml  coverage.yml  dependabot_slack.yml  fly.yml  publish.yml  test_native.yml  test_wasm.yml
m1_http_client/: README.md
tandem/: Cargo.toml  README.md
tandem/benches/: README.md  circuits.rs  credit_scoring.rs  multiplications.rs
tandem/src/: circuit.rs  hash.rs  leakyand.rs  leakydelta_ot.rs  lib.rs  ot_base.rs  simulator.rs  states.rs  types.rs
tandem/src/protocol/: cointossing.rs  mod.rs
tandem/tests/: adder64.txt  aes128.txt  bristol_parser.rs  circuits.rs  credit_scoring.rs  parser.rs  sha256.txt
tandem_garble_interop/: Cargo.toml  README.md
tandem_garble_interop/src/: lib.rs
tandem_http_client/: Cargo.toml  Dockerfile  README.md  build.sh  fly.toml  index.html
tandem_http_client/benches/: README.md  circuits.rs  credit_scoring.rs  multiplications.rs
tandem_http_client/benches/circuits_setup/: Tandem.toml  program.garble.rs
tandem_http_client/benches/common/: mod.rs
tandem_http_client/benches/multiplications_setup/: Tandem.toml  program.garble.rs
tandem_http_client/src/: lib.rs  main.rs  msg_queue.rs
tandem_http_client/tests/: .add.garble.rs  .div.garble.rs  .manyparties.garble.rs  .test_missing_input.garble.rs  cli.rs  credit_scoring.rs  echo_server.rs  smart_cookie.rs
tandem_http_client/tests/credit_scoring_setup/: Tandem.toml  program.garble.rs
tandem_http_client/tests/smart_cookie_setup/: Rocket.toml  Tandem.toml  program.garble.rs
tandem_http_server/: Cargo.toml  Dockerfile  README.md  fly.toml
tandem_http_server/src/: engine.rs  lib.rs  main.rs  msg_queue.rs  requests.rs  responses.rs  state.rs  tests.rs  types.rs
