[package]
name = "tandem"
version = "0.0.1-alpha-do-not-use"
edition = "2021"

[dependencies]
rand = "0.8.3"
rand_chacha = "0.3.1"
blake3 = {version = "1.3.3", features = ["traits-preview"] }
curve25519-dalek = "4.0.0-pre.1"
serde = "1.0"
bincode = "1.3"

[dev-dependencies]
tandem_garble_interop = { path = "../tandem_garble_interop" }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = "0.4"

[[bench]]
name = "multiplications"
harness = false

[[bench]]
name = "credit_scoring"
harness = false

[[bench]]
name = "circuits"
harness = false

[lib]
bench = false
