[package]
name = "tandem"
version = "0.3.0"
edition = "2021"
rust-version = "1.60.0"
description = "Cryptographic Engine for Secure Multi-Party Computation using Garbled Circuits"
repository = "https://github.com/sine-fdn/tandem/tree/main/tandem"
license = "MIT"
categories = ["cryptography"]
keywords = [
    "crypto",
    "secure-computation",
    "garbled-circuits",
    "circuit-description",
    "smpc",
]

[dependencies]
rand = "0.8.3"
rand_chacha = "0.3.1"
blake3 = { version = "1.5.0", features = ["traits-preview"] }
curve25519-dalek = { version = "4.1.1", features = ["rand_core"] }
serde = "1.0"
bincode = "1.3"

[dev-dependencies]
tandem_garble_interop = { version = "0.3.0", path = "../tandem_garble_interop" }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = "0.5"

[[bench]]
name = "multiplications"
harness = false

[[bench]]
name = "credit_scoring"
harness = false

[[bench]]
name = "circuits"
harness = false

[lib]
bench = false
