[package]
name = "tandem_http_server"
version = "0.1.0"
edition = "2021"

[dependencies]
tandem = { version = "0.0.1-alpha-do-not-use", path = "../tandem" }
rocket = { version = "0.5.0-rc.1", features = [ "json" ]}
rand = "0.8.3"
rand_chacha = "0.3.1"
bincode = "1.3"
serde_json = "1.0"
uuid = { version = "1.2", features = ["serde", "v4"] }
blake3 = "1.3"
url = "2.3"

# # IF YOU WANT TO BUILD main.rs WITHOUT ANY FEATURES (FOR DEV):
# tandem_garble_interop = { path = "../tandem_garble_interop" }
# figment = { version = "0.10", features = ["env", "toml", "json"] }
# serde = { version = "1.0" }

# IF YOU WANT TO BUILD main.rs ONLY WITH `bin` FEATURE (FOR RELEASE):
tandem_garble_interop = { path = "../tandem_garble_interop", optional = true }
figment = { version = "0.10", features = ["env", "toml", "json"], optional = true }
serde = { version = "1.0", optional = true }

[features]
bin = ["tandem_garble_interop", "figment", "serde"]

[[bin]]
name = "tandem_http_server"
required-features = ["bin"]

[dev-dependencies]
tandem_garble_interop = { path = "../tandem_garble_interop" }

[lib]
bench = false
