[package]
name = "tandem_http_server"
version = "0.3.0"
edition = "2021"
rust-version = "1.60.0"
description = "HTTP server for the Tandem SMPC engine"
repository = "https://github.com/sine-fdn/tandem/tree/main/tandem_http_server"
license = "MIT"
categories = ["cryptography", "command-line-utilities"]
keywords = [
    "crypto",
    "secure-computation",
    "garbled-circuits",
    "circuit-description",
    "smpc",
]

[dependencies]
tandem = { version = "0.3.0", path = "../tandem" }
rocket = { version = "0.5.0", features = ["json"] }
rand = "0.9.1"
rand_chacha = "0.3.1"
bincode = "1.3"
serde_json = "1.0"
uuid = { version = "1.16", features = ["serde", "v4"] }
blake3 = "1.8"
url = "2.5"

# # IF YOU WANT TO BUILD main.rs WITHOUT ANY FEATURES (FOR DEV):
# tandem_garble_interop = { version = "0.3.0", path = "../tandem_garble_interop" }
# figment = { version = "0.10", features = ["env", "toml", "json"] }
# serde = { version = "1.0" }

# IF YOU WANT TO BUILD main.rs ONLY WITH `bin` FEATURE (FOR RELEASE):
tandem_garble_interop = { version = "0.3.0", path = "../tandem_garble_interop", optional = true }
figment = { version = "0.10", features = [
    "env",
    "toml",
    "json",
], optional = true }
serde = { version = "1.0", optional = true }

[features]
bin = ["tandem_garble_interop", "figment", "serde"]

[[bin]]
name = "tandem_http_server"
required-features = ["bin"]

[dev-dependencies]
tandem_garble_interop = { version = "0.3.0", path = "../tandem_garble_interop" }

[lib]
bench = false
